Fix overflow and image block

--- a/bc/static_src/sass/components/_promo-aligned-media-with-text.scss
+++ b/bc/static_src/sass/components/_promo-aligned-media-with-text.scss
@@ -8,7 +8,7 @@
 
 .promo-aligned-media-with-text {
     // Escape parent
-    width: 100vw;
+    width: calc(100vw - 15px);
     transform: translateX(-50%);
     background-color: $color--earth-light;
     position: relative;
