--- a/bc/static_src/sass/components/_promo-explainer.scss
+++ b/bc/static_src/sass/components/_promo-explainer.scss
@@ -8,7 +8,7 @@
 
 .promo-explainer {
     // Escape parent
-    width: 100vw;
+    width: calc(100vw - 15px);
     transform: translateX(-50%);
     background-color: $color--promo-light-blue;
     position: relative;
